<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/manhinh"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".CreateActivity">

    <ImageView
        android:id="@+id/img_view_demo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="88dp"
        app:srcCompat="@mipmap/ic_launcher"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="36dp" />

    <Button
        android:id="@+id/btn_select_img"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn_chup"
        android:layout_alignTop="@+id/img_view_demo"
        android:background="@drawable/custom_button"
        android:text="@string/choose_img"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_lesson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="227dp"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edt_key_youtube"
        android:background="@drawable/custom_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="227dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/key_youtube" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:background="@drawable/custom_button"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/create_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/edt_lesson"
        android:layout_marginTop="19dp"
        android:text="@string/create_exe"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:layout_marginBottom="50dp"
        android:layout_alignLeft="@+id/edt_lesson" />

    <Button
        android:id="@+id/btn_chup"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/img_view_demo"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="62dp"
        android:background="@drawable/custom_button"
        android:text="@string/take_photo"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_content"
        android:background="@drawable/custom_edit_text"
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:hint="@string/content"
        android:ems="10"
        android:inputType="textMultiLine" />

</RelativeLayout>